# my-mpv-chapter-gen-and-recognize-song

./: .gitignore  README.md  chapter_gen.py  chapter_recognize.py  pyproject.toml
